2005-10-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  add some more commented-out config to the generated config files

2005-10-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/producers/audiotest/audiotest.xml: Add a
	component entry.

2005-10-20  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/encoders/vorbis/vorbis.xml: Add component
	entry.

	* flumotion/component/encoders/encoders.xml: Remove vorbis from
	here.

	* flumotion/launch/main.py (main): Setup the package path
	properly.

	* flumotion/launch/main.py (ComponentWrapper.__init__): If a
	source is not required, don't error if it's not there.
	(ComponentWrapper.__init__): Fix name error.

	* flumotion/component/producers/firewire/firewire.py
	(createComponent): Fix the default height.

	* flumotion/launch/main.py (main): More cleanups, feeder/eater
	verifications (with the goal being to get firewire to work)

	* flumotion/launch/main.py (main.mkfeedername): Verify that the
	link is from a valid feeder. If no feeder is spefified, take the
	first one in the list instead of 'default' (makes firewire work).

	* flumotion/common/registry.py (ComponentRegistry.dump): Save
	eaters and feeders to the registry. Ak.

	* flumotion/manager/Makefile.am: 
	* flumotion/common/Makefile.am: Enable TAGS.

	* configure.ac: 
	* flumotion/component/converters/Makefile.am: 
	* flumotion/component/converters/pipeline/Makefile.am: 
	* flumotion/component/converters/pipeline/__init__.py:
	* flumotion/component/converters/pipeline/pipeline.xml: 
	* flumotion/component/converters/pipeline/pipeline.py:
	* flumotion/component/producers/Makefile.am: 
	* flumotion/component/producers/pipeline/Makefile.am: 
	* flumotion/component/producers/pipeline/__init__.py:
	* flumotion/component/producers/pipeline/pipeline.xml: 
	* flumotion/component/producers/pipeline/pipeline.py: Add somehing
	like what was in flumotion.component.base as pipeline-producer and